--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,22 +2,31 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-
   build:
     name: Build
-    runs-on: golang:1.14-buster
+    runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@master
-      
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        
-    - name: Build
-      run: go build -v .
+      - name: Set up Go 1.14
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.14
+        id: go
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+          if [ -f Gopkg.toml ]; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+              dep ensure
+          fi
+
+      - name: Build
+        run: go build -v .
