--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,3 +30,24 @@ jobs:
 
       - name: Build
         run: go build -v .
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./aws-tagged-resource-finder
+          asset_name: aws-tagged-resource-finder
+          asset_content_type: application/x-executable
