--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          tag_name: "releases/${{ github.ref }}"
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
