--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: $(date "+%Y%m%d%H%M%S")
+          tag_name: ${{ github.sha }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
