--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
                 "eu-west-1",
                 "-tag",
                 "Name",
-                "-reverse"
+                "-untagged"
             ]
         }
     ]
